# conversation-codec-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: integration.rs
